# Gazebo-car-simulator

./: .gitignore  .gitmodules  README.md  analyze_bag.py  analyze_speed_bag.py  launch.launch
CarCommandsFr/: CMakeLists.txt  package.xml
CarCommandsFr/include/car_commands_fr/: car_commands_fr.h
CarCommandsFr/launch/: car_commands_fr.launch
CarCommandsFr/src/: car_commands_fr.cpp
Documentation/UserManual/: car_dynamic_linearizer.tex  car_kinematic_linearizer.tex  conclusions.tex  mit_racecar.tex  ode_simulator.tex  pacejka_plugin.tex  plugin_diagrams.tex  python_scripts.tex  trajectory_tracker.tex  user_manual.aux  user_manual.out  user_manual.tex  user_manual.toc  user_manual_TITLEPAGE.tex
catkin_ws/: INFO.txt
catkin_ws/src/CarCommandsFr/config/: car_commands_fr.yaml
catkin_ws/src/CarCommandsFr/launch/: car_commands_fr.launch
catkin_ws/src/CarCommandsFr/src/: car_commands_fr.cpp
catkin_ws/src/GazeboWheelSlipPlugin/: CMakeLists.txt  package.xml
catkin_ws/src/GazeboWheelSlipPlugin/cfg/: WheelPacejka.cfg  WheelSlip.cfg
catkin_ws/src/GazeboWheelSlipPlugin/include/: gazebo_ros_pacejka.h  gazebo_ros_wheel_slip.h  wheel_slip_pacejka.hh
catkin_ws/src/GazeboWheelSlipPlugin/src/: gazebo_ros_pacejka.cpp  gazebo_ros_wheel_slip.cpp  wheel_slip_pacejka.cc
catkin_ws/src/car_control/: CMakeLists.txt  package.xml
catkin_ws/src/car_control/config/: car_commands_conf.yaml
catkin_ws/src/car_control/launch/: car_commands.launch
catkin_ws/src/car_control/src/: car_controller.cpp  car_controller_node.cpp  car_odometry_reader.cpp  car_odometry_reader_node.cpp
catkin_ws/src/car_dynamic_linearizer/: CMakeLists.txt  package.xml
catkin_ws/src/car_dynamic_linearizer/config/: car_params_conf.yaml
catkin_ws/src/car_dynamic_linearizer/launch/: car_dyn_linearizer.launch
catkin_ws/src/car_dynamic_linearizer/src/: car_commands.cpp  car_commands_node.cpp  car_dyn_linearizer.cpp  car_dyn_linearizer_node.cpp
catkin_ws/src/car_kinematic_control/: CMakeLists.txt  package.xml
catkin_ws/src/car_kinematic_control/config/: car_params_conf.yaml
catkin_ws/src/car_kinematic_control/include/: car_kin_controller.h
catkin_ws/src/car_kinematic_control/launch/: car_kin_controller.launch
catkin_ws/src/car_kinematic_control/src/: car_kin_controller.cpp  car_kin_controller_node.cpp
catkin_ws/src/car_kinematic_linearizer/: CMakeLists.txt  package.xml
catkin_ws/src/car_kinematic_linearizer/config/: car_params_conf.yaml
catkin_ws/src/car_kinematic_linearizer/include/: car_kin_linearizer.h
catkin_ws/src/car_kinematic_linearizer/launch/: car_kin_linearizer.launch
catkin_ws/src/car_kinematic_linearizer/src/: car_kin_linearizer.cpp  car_kin_linearizer_node.cpp  car_kin_velocitypub_node.cpp
catkin_ws/src/ode_simulator/: CMakeLists.txt  package.xml
catkin_ws/src/ode_simulator/config/: ode_simulator_params.yaml
catkin_ws/src/ode_simulator/include/: singletrack_ode.h
catkin_ws/src/ode_simulator/launch/: ode_simulator.launch
catkin_ws/src/ode_simulator/src/: ode_simulator.cpp  ode_simulator_node.cpp  singletrack_ode.cpp
catkin_ws/src/trajectory_tracker/: CMakeLists.txt  package.xml
catkin_ws/src/trajectory_tracker/cfg/: DynReconf.cfg
catkin_ws/src/trajectory_tracker/config/: trajectory_tracker.yaml
catkin_ws/src/trajectory_tracker/launch/: trajectory_tracker.launch
catkin_ws/src/trajectory_tracker/src/: trajectory_tracker.cpp  trajectory_tracker_node.cpp
config_robot_description/: macros.xacro  racecar.gazebo
racecar_control_scripts/: keyboard_teleop_MF.py
racecar_control_scripts/CarCommandsFr/: car_commands_fr.cpp  car_commands_fr_node.cpp  car_commands_friction.cpp
racecar_control_scripts/CarCommandsFr/car_commands_fr/: car_commands_fr.h
(+7 files in other folders)
